OCP/deploy-template/guest01/tomcat7-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: tomcat7
  namespace: guest1
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: tomcat7
